--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^6.26.2",
     "shiki": "^1.22.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
